<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/choose_lvl_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_lvl_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/lvl_test"
        />

    <Button
        android:id="@+id/btn_lvl_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/lvl_easy"
        />

    <Button
        android:id="@+id/btn_lvl_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/lvl_normal"
        />

    <Button
        android:id="@+id/btn_lvl_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/lvl_hard"
        />

</LinearLayout>